--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
     <div class="container">
 
       <div class="logo"> 
-        <img class = "icon" src="assets/1.jpg">
+        <img class = "icon" src="assets/1.png">
       </div>
 
       <div class="bio">
