--- a/resume.html
+++ b/resume.html
@@ -63,9 +63,9 @@
 
       <div class="sub-container">
 
-        <div class="navbar">
+        <div class="navbar-story">
 
-          <ul class="nav">
+          <ul class="ul-nav">
             <li class="list-nav"><a href="index.html">My UX Story</a></li>
             <li class="list-nav"><a href="resume.html">Resume</a></li>
   
@@ -75,7 +75,7 @@
 
         <div class="exp">
           
-            <img class="resume" src="assets/10.png">
+          <br> Work In Progress
             
           </div>
 
