--- a/resume.html
+++ b/resume.html
@@ -14,6 +14,7 @@
   
   <title>Rohit Writes</title>
   <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="assets/0.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
