--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
     <div class="container">
 
+      <!--<div class="navbar">
+        <ul>
+          <li><a href=resume.html></a>Resume</li>
+      </div> -->
+
       <div class="logo"> 
         <img class = "icon" src="assets/1.png">
       </div>
@@ -64,15 +69,7 @@
 
       <div class="sub-container">
 
-        <div class="navbar-story">
-
-          <ul class="ul-nav">
-            <li class="list-nav"><a href="index.html">My UX Story</a></li>
-            <li class="list-nav"><a href="resume.html">Resume</a></li>
-  
-          </ul>
         
-        </div>
 
         <div class="ux">
           
