--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
 
   <div class="app">
 
+    
     <div class="container">
 
-      <!--<div class="navbar">
-        <ul>
-          <li><a href=resume.html></a>Resume</li>
-      </div> -->
+    <!-- <div class="cover">
+        <img class="banner" src="assets/cover.png" height="400px" width=100%>
+       </div>
+    -->
+      
 
       <div class="logo"> 
         <img class = "icon" src="assets/1.png">
