--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
         
       <div class="name">
-        <h4>Rohit Poduval</h4>
+        <h4>Rohit Prakash Poduval</h4>
        </div>
 
       <div class="desc">
