--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </script>
 
 
-  <title>Rohit Writes</title>
+  <title>Rohit Writes UX</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/0.png">
